--- a/README
+++ b/README
@@ -13,4 +13,4 @@ As of 04/27/2025 it currently:
 05/29/2025
 - Live on Github Pages!
 
-👉 [View Dashboard Here](https://jeffreyjing.github.io/minikube-dashboard)
+👉 View Dashboard Here: https://jeffreyjing.github.io/minikube-dashboard
